Final fix to scrollbars - Read Description
Reduced vertical bar width to match horizontal bar height, since
dimensional changes to horizontal scroll bars weren't taking effect.
Something is probably overwritting them, outside of this CSS code.

--- a/web/css/menus/menuCustomizePizza.css
+++ b/web/css/menus/menuCustomizePizza.css
@@ -263,7 +263,7 @@ border-radius: 20px;
 ::-webkit-scrollbar:vertical {
 		background-color: rgba(46, 125, 50, 0.2);
 		border-radius: 20px;
-		width: 0.68%;
+		width: 0.5%;
 }
 
 ::-webkit-scrollbar-thumb {
